--- a/ChatBob/View/Base.lproj/Main.storyboard
+++ b/ChatBob/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IcK-es-z8H">
-    <device id="retina6_0" orientation="portrait" appearance="dark"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,6 +16,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="e8b-LZ-p5V">
                         <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -229,10 +230,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tus-Sg-7VX">
-                                <rect key="frame" x="0.0" y="750" width="390" height="60"/>
+                                <rect key="frame" x="0.0" y="760" width="390" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Message" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7H5-qK-GSA">
-                                        <rect key="frame" x="20" y="20" width="290" height="40"/>
+                                        <rect key="frame" x="5" y="5" width="315" height="40"/>
+                                        <color key="tintColor" systemColor="systemYellowColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Gs3-Th-8hZ"/>
                                         </constraints>
@@ -240,7 +242,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eNX-Bu-URM">
-                                        <rect key="frame" x="330" y="20" width="40" height="40"/>
+                                        <rect key="frame" x="330" y="5" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="4iM-hT-Fvm"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="58a-n9-nwg"/>
@@ -249,7 +251,7 @@
                                         </constraints>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="paperplane.circle" catalog="system"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="paperplane.circle.fill" catalog="system"/>
                                         <connections>
                                             <action selector="sendPressed:" destination="LbW-AE-6Ys" eventType="touchUpInside" id="A1a-ve-aSj"/>
                                         </connections>
@@ -257,16 +259,16 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="0dd-O4-MfQ"/>
-                                    <constraint firstItem="7H5-qK-GSA" firstAttribute="top" secondItem="tus-Sg-7VX" secondAttribute="top" constant="20" id="5pS-Y7-lgR"/>
-                                    <constraint firstItem="eNX-Bu-URM" firstAttribute="top" secondItem="tus-Sg-7VX" secondAttribute="top" constant="20" id="Klu-0J-J9c"/>
+                                    <constraint firstAttribute="height" constant="50" id="0dd-O4-MfQ"/>
+                                    <constraint firstItem="7H5-qK-GSA" firstAttribute="top" secondItem="tus-Sg-7VX" secondAttribute="top" constant="5" id="5pS-Y7-lgR"/>
+                                    <constraint firstItem="eNX-Bu-URM" firstAttribute="top" secondItem="tus-Sg-7VX" secondAttribute="top" constant="5" id="Klu-0J-J9c"/>
                                     <constraint firstAttribute="trailing" secondItem="eNX-Bu-URM" secondAttribute="trailing" constant="20" id="XGv-Pc-aRN"/>
-                                    <constraint firstItem="7H5-qK-GSA" firstAttribute="leading" secondItem="tus-Sg-7VX" secondAttribute="leading" constant="20" id="ZZ6-q0-RNc"/>
-                                    <constraint firstItem="eNX-Bu-URM" firstAttribute="leading" secondItem="7H5-qK-GSA" secondAttribute="trailing" constant="20" id="qOO-Pl-rWL"/>
+                                    <constraint firstItem="7H5-qK-GSA" firstAttribute="leading" secondItem="tus-Sg-7VX" secondAttribute="leading" constant="5" id="ZZ6-q0-RNc"/>
+                                    <constraint firstItem="eNX-Bu-URM" firstAttribute="leading" secondItem="7H5-qK-GSA" secondAttribute="trailing" constant="10" id="qOO-Pl-rWL"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="MV3-bF-e5Z">
-                                <rect key="frame" x="0.0" y="88" width="390" height="662"/>
+                                <rect key="frame" x="0.0" y="88" width="390" height="672"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -303,11 +305,11 @@
         <designable name="DV8-TA-Pnp"/>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="UKJ-E4-vIU"/>
+        <segue reference="LBx-aH-dGU"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
-        <image name="paperplane.circle" catalog="system" width="128" height="121"/>
+        <image name="paperplane.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
