--- a/ChatBob/View/MessageCell.xib
+++ b/ChatBob/View/MessageCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,20 +18,28 @@
                 <rect key="frame" x="0.0" y="0.0" width="322" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aAb-6E-m35">
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aAb-6E-m35">
                         <rect key="frame" x="10" y="10" width="302" height="50"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SKp-mG-Vbd">
+                                <rect key="frame" x="0.0" y="0.5" width="20" height="19"/>
+                                <color key="tintColor" systemColor="systemPurpleColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="9Jc-Nf-Bd1"/>
+                                    <constraint firstAttribute="width" constant="20" id="ia7-zk-uB9"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tHV-mk-3Nu">
-                                <rect key="frame" x="0.0" y="0.0" width="242" height="50"/>
+                                <rect key="frame" x="30" y="0.0" width="242" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hff-rQ-gTV">
                                         <rect key="frame" x="10" y="10" width="222" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                <color key="backgroundColor" name="OtherUserCellColor"/>
                                 <constraints>
                                     <constraint firstItem="Hff-rQ-gTV" firstAttribute="leading" secondItem="tHV-mk-3Nu" secondAttribute="leading" constant="10" id="Y2w-ah-Wle"/>
                                     <constraint firstItem="Hff-rQ-gTV" firstAttribute="top" secondItem="tHV-mk-3Nu" secondAttribute="top" constant="10" id="kgO-cp-OWO"/>
@@ -38,12 +47,12 @@
                                     <constraint firstAttribute="bottom" secondItem="Hff-rQ-gTV" secondAttribute="bottom" constant="10" id="uPo-Pq-DAW"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="YSM-vv-UVo">
-                                <rect key="frame" x="262" y="0.5" width="40" height="49"/>
-                                <color key="tintColor" red="1" green="0.0" blue="0.2156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="YSM-vv-UVo">
+                                <rect key="frame" x="282" y="0.5" width="20" height="19"/>
+                                <color key="tintColor" systemColor="systemYellowColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="mux-zX-YkP"/>
-                                    <constraint firstAttribute="height" constant="40" id="tj2-oV-rdV"/>
+                                    <constraint firstAttribute="width" constant="20" id="mux-zX-YkP"/>
+                                    <constraint firstAttribute="height" constant="20" id="tj2-oV-rdV"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -60,6 +69,7 @@
             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="label" destination="Hff-rQ-gTV" id="Be9-Bg-vrp"/>
+                <outlet property="leftImageView" destination="SKp-mG-Vbd" id="tzc-CR-OMX"/>
                 <outlet property="messageBubble" destination="tHV-mk-3Nu" id="wJv-7T-8XG"/>
                 <outlet property="rightImageView" destination="YSM-vv-UVo" id="FmJ-fd-WCK"/>
             </connections>
@@ -67,9 +77,16 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="person.circle" catalog="system" width="128" height="121"/>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="a.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="b.circle.fill" catalog="system" width="128" height="121"/>
+        <namedColor name="OtherUserCellColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
