Change the indentations to 2 spaces for the project

--- a/ChatBob/View/Base.lproj/Main.storyboard
+++ b/ChatBob/View/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S35-Uh-aH8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="69.66824644549763"/>
+            <point key="canvasLocation" x="0.0" y="70"/>
         </scene>
         <!--Welcome View Controller-->
         <scene sceneID="tne-QT-ifu">
